2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.cpp:
	* X3DPrecisionPlacementPanelInterface.cpp: 

2014-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DColorPerVertexEditorInterface.h:
	* X3DColorPerVertexEditorInterface.cpp: 

2014-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp: 

2014-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Arrow.svg:
	* Select.svg:
	* BrowserWindow.xml:
	* X3DBrowserWindowInterface.h:
	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.cpp: 

2014-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml:
	* Shading.svg:
	* ColorPerVertexEditorPreview.x3dv:
	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.cpp: 

2014-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* MFColorRGBAButton.h:
	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.cpp:
	* X3DPrecisionPlacementPanelInterface.cpp: 

2014-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* MFStringWidget.h:
	* TextEditor.cpp:
	* X3DLODEditor.cpp:
	* LightEditor.cpp:
	* X3DGridEditor.cpp:
	* InlineEditor.cpp:
	* X3DAngleEditor.cpp:
	* X3DSpotLightEditor.cpp:
	* ViewpointEditor.cpp:
	* X3DPointLightEditor.cpp:
	* X3DFontStyleNodeEditor.cpp:
	* MotionBlurEditor.cpp:
	* X3DMaterialEditor.cpp:
	* X3DViewpointEditor.cpp:
	* X3DTexture2DNodeEditor.cpp:
	* X3DDirectionalLightEditor.cpp:
	* X3DGeoViewpointEditor.cpp:
	* X3DTextureTransformEditor.cpp:
	* X3DLayoutEditor.cpp:
	* X3DOrthoViewpointEditor.cpp:
	* X3DTexturePropertiesEditor.cpp:
	* X3DFillPropertiesEditor.cpp:
	* X3DLinePropertiesEditor.cpp:
	* NavigationInfoEditor.cpp: