@@ -1,5 +1,9 @@
 2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* ColorPerVertexEditor.cpp: 
+
+2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DColorPerVertexEditorInterface.h:
 	* ColorPerVertexEditor.h:
 	* X3DColorPerVertexEditorInterface.cpp:
